dev/tests/cases/neg/09_str_num_compare.tv
df main() -> void {
    set n: i64 = 5;
    check n == "text" { echo!("x"); }
}
